Add config parameter for outfile

--- a/time_clustering.conf
+++ b/time_clustering.conf
@@ -1,5 +1,7 @@
 [general]
-infile = active_editors_all_languages.csv
+infile = data/active_editors_all_languages.csv
+outfile = data/langs_clusters.tsv
+
 langs = de, en, es, fr, ja, ar, fa, he, id, it, ko, nl, pl, pt,
         ru, tr, uk, vi, zh, bn, cs, fi, hu, sv, th, az, be, bg,
         ca, da, el, eo, et, eu, gl, hi, hr, hy, ka, lt, lv, ml,
